force-app/main/default/objects/Round_Robin__c/fields/Round_Robin_Type__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Type__c</fullName>
    <label>Round Robin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Common</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>