force-app/main/default/objects/Round_Robin__c/validationRules/Project_Head_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Head_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Project_Head__c  )</errorConditionFormula>
    <errorDisplayField>Project_Head__c</errorDisplayField>
    <errorMessage>Please Select Project Head</errorMessage>
</ValidationRule>