force-app/main/default/objects/Round_Robin__c/listViews/Common_Round_Robins.listView-meta.xml
<ListView>
    <fullName>Common_Round_Robins</fullName>
    <columns>NAME</columns>
    <columns>Project_Assigned__c</columns>
    <columns>Round_Robin_Type__c</columns>
    <columns>Lead_Source_Type__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Round_Robin_Type__c</field>
        <operation>equals</operation>
        <value>Common</value>
    </filters>
    <label>Common Round Robins</label>
</ListView>